========================
0.0.39
========================

- added a new alias `request.proxy()` to `response.proxy()`
- fixed `abort` event for incoming `request`
- fixed `controller.json()` method
- fixed `array.quicksort()` method
- improved HTTP caching in merged files
- improved unit-testing

========================
0.0.38
========================

- added `PAUSE(is_paused)` method that can pause loading of all Total.js dependencies
- added dynamic delegates for receiving of messages in FlowStream in the form `instance.mesage_<INPUT_NAME>`
- added `response.proxy(target, [copypath], [after], [timeout])`
- improved some parts of code
- improved `MIDDLEWARE(name, fn, [assign], [first])` method
- fixed measuring dimension for `.gif` images
- fixed `BACKUP()` method (a problem with sockets)
- fixed potential remote code execution in `U.set()` founded by [Snyk](https://snyk.io/vuln)
- fixed routing with camel-Case URL addresses
- fixed sending of messages via inline registered components in FlowStream
- fixed a problem with FileStorage and opened file descriptors

========================
0.0.37
========================

- added CSRF
	- `CONF.secret_csrf`
	- `CONF.default_csrf_maxage`
	- `DEF.onCSRFcreate(req)`
	- `DEF.onCSRFcheck(req)`
	- `req.csrf()` generates a token
	- `controller.csrf()` generates a token
	- `@{csrf}` generates a token in View engine
	- `schema.csrf()` enables csrf for schemas and their routes
	- new `csrf` flag in `ROUTE()` method
	- `csrf` verification via `x-csrf-token` header or via URL argument `?csrf=TOKEN`
	- `RESTBuilder.csrf(token)`
- added `HTMLMAIL(address, subject, body, [language], [callback])` for sending of raw HTML mail messages
- added `NPMINSTALL(name, callback)` for installing of 3rd party NPM dependencies
- added `FILESTORAGE().image()` method for reading of images
- `CONF.default_errorbuilder_errors` for handling of all HTTP errors via ErrorBuilder
- decreased `default_interval_websocket_ping` to `1` minute (from `3`)