@@ -6,6 +6,7 @@
 - fixed `abort` event for incoming `request`
 - fixed `controller.json()` method
 - fixed `array.quicksort()` method
+- fixed `controller.invalid()`, added missing second argument called `error` (optional)
 - improved HTTP caching in merged files
 - improved unit-testing
 
